--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h1 class="text-center">To Do List</h1>
                 <ul>
                     <li v-for="(element, index) in todoArray">
-                        <div :class="verificaDoneElemento(element)">
+                        <div :class="verificaDoneElemento(element)" @click="changeDone(element)">
                             <i class="fas fa-times p-3" @click="remove(index)"></i>
                             {{element.text}}
                         </div>
